language set to english added comments to scenario 1 and utils added macro for recalling guide and loyal soldiers added event for death of guide created scenario 2, dialogues are missing

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -17,7 +17,7 @@
     user_team_name= _ "Elves"
     shroud=yes
 
-		type=Elrilindë Elvish Sorceress
+		type=Elrilindë Elvish Sorceress # only sprite is different, i like the older more
 		id=Elrilindë
 		name=_"Elrilindë"
 		canrecruit=yes
@@ -67,7 +67,7 @@
       x,y=16,7
     [/village]
 	[/side]
-  {LIMIT_CONTEMPORANEOUS_RECRUITS 2 (Elvish Shaman) 4}
+  {LIMIT_CONTEMPORANEOUS_RECRUITS 2 (Elvish Shaman) 4} # elves need only a few healers
   
   [side]
     side=3
@@ -113,6 +113,7 @@
   [event]
 		name=start
     {MOVE_UNIT id=Tendriel 8 4}
+    # introduction
 		[message]
 			speaker=Tendriel
 			message=_"Humans from a near city are attacking us, milady."
@@ -155,6 +156,7 @@
       [filter_location]
         x=18-22
         y=0-10
+        # flowers
         terrain=Gg^Efm
       [/filter_location]
     [/filter]
@@ -162,6 +164,7 @@
 			speaker=Elrilindë
 			message=_"It is really beautiful here. I could stay here forever. But wait ..."
 		[/message]
+    # from now hero sees the whole map
     [modify_side]
       side=1
       shroud=no
@@ -172,6 +175,7 @@
     [/modify_side]
     [redraw]
     [/redraw]
+    # and knows humans' leader
 	  [scroll_to_unit]
 	    id=Raoron
 	  [/scroll_to_unit]
@@ -197,6 +201,7 @@
       user_team_name= _ "Humans"
     [/modify_side]
     {FULL_HEAL id=Raoron}
+    # i need make the game to stop the attack but i have no idea how to do it
     [message]
 			speaker=Tendriel
 			message=_"We lived in peace for centuries, traded, helped each other. Why did you break it, humans?"
@@ -303,6 +308,7 @@
 	  [filter_second]
 	    id=Elrilindë
 	  [/filter_second]
+    # after first kill hero has a speech
 	  [message]
 		  speaker=second_unit
 		  message=_"I do not like killing others."
@@ -317,3 +323,4 @@
   {TENDRIEL_DEATH1}
   {ELUSIVE_HERO}
 [/scenario]
+ 
