--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -86,3 +86,17 @@
     {DEFEAT}
   [/event]
 #enddef
+
+#define GUIDES_DEATH
+  [event]
+    name=die
+    [filter]
+      id=Tendriel
+    [/filter]
+    [message]
+      speaker=Elrilindë
+      message=_"No! I will remember nothing without her."
+    [/message]
+    {DEFEAT}
+  [/event]
+#enddef
