--- a/utils/misc.cfg
+++ b/utils/misc.cfg
@@ -26,6 +26,7 @@
   [/effect]
 #enddef
 
+# i do not want her to be hit so often at the begining
 #define ELUSIVE_HERO
   {FORCE_CHANCE_TO_HIT side=2,3,4,5 id=Elrilindë 10 ()}
 #enddef
@@ -34,4 +35,33 @@
   gold=0
   income=-2
   village_gold=0
+#enddef
+
+# recalls guide and loyal elves
+#define RECALL_HEROES
+  [recall]
+    id=guide
+  [/recall]
+  [store_unit]
+    [filter]
+      side=1
+      [filter_wml]
+        unkeep=loyal
+      [/filter_wml]
+      [not]
+        id=Elrilindë
+      [/not]
+      [not]
+        id=guide
+      [/not]
+    [/filter]
+    kill=no
+    variable=units_to_recall
+  [/store_unit]
+  {FOREACH units_to_recall i}
+  [recall]
+      id=$units_to_recall[$i].id
+  [/recall]
+  {NEXT i}
+  {CLEAR_VARIABLE units_to_recall}
 #enddef
