--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -1,9 +1,33 @@
 #textdomain wesnoth-The_Memories
 
+#define LOYAL_ELF TYPE ID
+  [unit]
+    side=1
+    type={TYPE}
+    id={ID}
+    generate_name=yes
+    random_traits=yes
+    random_gender=yes
+    upkeep=loyal
+    overlays="misc/loyal-icon.png"
+  [/unit]
+#enddef
+
+#define WILD_WOLF X Y
+  [unit]
+    side=2
+    type=Wolf
+    generate_name=yes
+    random_traits=yes
+    upkeep=loyal
+    x,y={X},{Y}
+  [/unit]
+#enddef
+
 [scenario]
 	id=02_Seeking_the_sylph
-	name=_"Seeking the sylph"
-	next_scenario=03_Xxx
+	name=_"Seeking the Sylph"
+	next_scenario=03_The_Sylph
 	map_data="{~add-ons/The_Memories/maps/02_Seeking_the_sylph.map}"
 	snapshot=no
   turns=25
@@ -60,9 +84,16 @@
     # recall the guide
     {RECALL_HEROES}
     # and give some loyal elves
-    {GENERIC_UNIT 1 (Elvish Fighter) x y} {NO_UPKEEP}
-    {GENERIC_UNIT 1 (Elvish Archer) x y} {NO_UPKEEP}
-    {GENERIC_UNIT 1 (Elvish Archer) x y} {NO_UPKEEP}
+    {LOYAL_ELF (Elvish Fighter) elf1}
+    {LOYAL_ELF (Elvish Archer) elf2}
+    {LOYAL_ELF (Elvish Archer) elf3}
+    # place some wild animals
+    {WILD_WOLF 26 30}
+    {WILD_WOLF 30 31}
+    {WILD_WOLF 23 32}
+    {WILD_WOLF 27 33}
+    {WILD_WOLF 15 33}
+    {WILD_WOLF 7 3}
     # starting dialogue
     # to write
 	[/event]
@@ -72,14 +103,12 @@
     name=moveto
     [filter]
       side=1
-      # change x a y
-      x=18-22
-      y=0-10
+      x=1-3
+      y=7-14
     [/filter]
-    # and write a speech
     [message]
 			speaker=Elrilindë
-			message=_""
+			message=_"I can feel very strong magic here. It may be the Sylph."
 		[/message]
     [endlevel]
       result=victory
@@ -107,7 +136,18 @@
     [/message]
   [/event]
   
+  [event]
+    name=time over
+    [message]
+      speaker=Elrilindë
+      message=_"We lost too much time."
+    [/message]
+  [/event]
+  
   {ELRILINDES_DEATH1}
   {GUIDES_DEATH}
   {ELUSIVE_HERO}
 [/scenario]
+
+#undef LOYAL_ELF
+#undef WILD_WOLF
