easter egg in scenario 1 appears only once and scroll to hero after that added time over speech for scenario 1 scenario two does not end after first turn, added X and Y parameters to macro LOYAL_ELF

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -301,7 +301,6 @@
   # easter egg
   [event]
 	  name=die
-	  first_time_only=no
 	  [filter]
 	    side=3
 	  [/filter]
@@ -317,7 +316,19 @@
 		  speaker=Tendriel
 		  message=_"Me neither, milady. But we must get to their leader and they are blocking our way."
 		[/message]
+    # scroll to her again
+    [scroll_to_unit]
+	    id=Elrilindë
+	  [/scroll_to_unit]
 	[/event]
+  
+  [event]
+    name=time over
+    [message]
+      speaker=Tendriel
+      message=_"I can see more humans coming. We are doomed."
+    [/message]
+  [/event]
   
   {ELRILINDES_DEATH1}
   {TENDRIEL_DEATH1}
