--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-The_Memories
 
-#define LOYAL_ELF TYPE ID
+#define LOYAL_ELF TYPE ID X Y
   [unit]
     side=1
     type={TYPE}
@@ -10,6 +10,7 @@
     random_gender=yes
     upkeep=loyal
     overlays="misc/loyal-icon.png"
+    x,y={X},{Y}
   [/unit]
 #enddef
 
@@ -33,6 +34,7 @@
   turns=25
   # add music
 	{DEFAULT_SCHEDULE}
+  victory_when_enemies_defeated=no
   
   [side]
 		side=1
@@ -84,9 +86,9 @@
     # recall the guide
     {RECALL_HEROES}
     # and give some loyal elves
-    {LOYAL_ELF (Elvish Fighter) elf1}
-    {LOYAL_ELF (Elvish Archer) elf2}
-    {LOYAL_ELF (Elvish Archer) elf3}
+    {LOYAL_ELF (Elvish Fighter) elf1 42 15}
+    {LOYAL_ELF (Elvish Archer) elf2 41 17}
+    {LOYAL_ELF (Elvish Archer) elf3 42 17}
     # place some wild animals
     {WILD_WOLF 26 30}
     {WILD_WOLF 30 31}
