added scenario 2, some dialogues are missing, side 3 definition is incomplete one comment in scenario 1 was changed

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -17,7 +17,7 @@
     user_team_name= _ "Elves"
     shroud=yes
 
-		type=Elrilindë Elvish Sorceress # only sprite is different, i like the older more
+		type=Elrilindë Elvish Sorceress # only sprite is different, i like the older one more
 		id=Elrilindë
 		name=_"Elrilindë"
 		canrecruit=yes
