elves and wolves in scenario 2 are no longer animated when creating starting dialogue for scenario 2 has been written corrected macro GUIDES_DEATH (wrong id in filter)

--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -11,6 +11,7 @@
     upkeep=loyal
     overlays="misc/loyal-icon.png"
     x,y={X},{Y}
+    animate=no
   [/unit]
 #enddef
 
@@ -22,6 +23,7 @@
     random_traits=yes
     upkeep=loyal
     x,y={X},{Y}
+    animate=no
   [/unit]
 #enddef
 
@@ -97,7 +99,22 @@
     {WILD_WOLF 15 33}
     {WILD_WOLF 7 3}
     # starting dialogue
-    # to write
+    [message]
+      speaker=Elrilindë
+      message=_"Do you have any idea where could the Sylph live, Gioniel?"
+    [/message]
+    [message]
+      speaker=Gioniel
+      message=_"I am not sure, milady. By the tales she could live to the west but nobody of our people saw her for decades."
+    [/message]
+    [message]
+      speaker=Elrilindë
+      message=_"Ok let us go to the west."
+    [/message]
+    [message]
+      speaker=Gioniel
+      message=_"There are some wild animals here but you do not need to worry, milady. We will protect you."
+    [/message]
 	[/event]
   
   # victory
