corrected id of Gioniel in messages in scenario 2

--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -104,7 +104,7 @@
       message=_"Do you have any idea where could the Sylph live, Gioniel?"
     [/message]
     [message]
-      speaker=Gioniel
+      speaker=guide
       message=_"I am not sure, milady. By the tales she could live to the west but nobody of our people saw her for decades."
     [/message]
     [message]
@@ -112,7 +112,7 @@
       message=_"Ok let us go to the west."
     [/message]
     [message]
-      speaker=Gioniel
+      speaker=guide
       message=_"There are some wild animals here but you do not need to worry, milady. We will protect you."
     [/message]
 	[/event]
