scenario 3 - side 1 starts with shroud - sides 1 and 2 starts with some villages - side 2 has some gold and recruit list - side 3 has no leader, gold and income (will get soldiers at start event)

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -16,6 +16,7 @@
 		controller=human
 		team_name=elves
     user_team_name= _ "Elves"
+    shroud=yes
 
 		type=Elrilindë Elvish Sorceress
 		id=Elrilindë
@@ -24,6 +25,16 @@
     
 		{FLAG_VARIANT wood-elvish}
 		{SIDE_NO_ECONOMY}
+    
+    [village]
+      x,y=30,8
+    [/village]
+    [village]
+      x,y=27,11
+    [/village]
+    [village]
+      x,y=31,14
+    [/village]
 	[/side]
   
   [side]
@@ -38,10 +49,24 @@
 		name=_"Sylph"
 		canrecruit=yes
 
-		recruit=
+		recruit=Elvish Shaman
 		
 		{FLAG_VARIANT wood-elvish}
-		{SIDE_NO_ECONOMY}
+    gold=80
+    income=-1
+    
+    [village]
+      x,y=17,8
+    [/village]
+    [village]
+      x,y=9,9
+    [/village]
+    [village]
+      x,y=12,12
+    [/village]
+    [village]
+      x,y=17,13
+    [/village]
 	[/side]
   
   [side]
@@ -50,16 +75,10 @@
     team_name=enemies
     user_team_name= _ "Enemies"
     
-    type=
-    id=
-    name=_""
-    canrecruit=yes
-    
-    recruit=
+    no_leader=yes
     
     {FLAG_VARIANT loyalist}
-    gold=150
-		income=0
+		{SIDE_NO_ECONOMY}
   [/side]
   
   [event]
