recalling loyal elves works just fine now

--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -12,6 +12,9 @@
     overlays="misc/loyal-icon.png"
     x,y={X},{Y}
     animate=no
+    [variables]
+      to_recall=yes
+    [/variables]
   [/unit]
 #enddef
 
