--- a/utils/misc.cfg
+++ b/utils/misc.cfg
@@ -46,7 +46,9 @@
     [filter]
       side=1
       [filter_wml]
-        unkeep=loyal
+        [variables]
+          to_recall=yes
+        [/variables]
       [/filter_wml]
       [not]
         id=Elrilindë
