scenario 3 - starting dialogue has been written - death speech for sylph has been written - part of ending dialogue has been written

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -102,7 +102,30 @@
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # starting dialogue
-    # to write
+    [message]
+      speaker=Elrilindë
+      message=_"I can see the Sylph."
+    [/message]
+    [message]
+      speaker=guide
+      message=_"I am so excited. No elf saw her for decades."
+    [/message]
+    [message]
+      speaker=sylph
+      message=_"Elves? I didn't see my kind for a long time. Who are you?"
+    [/message]
+    [message]
+      speaker=Elrilindë
+      message=_"I am Elrilindë and need your help. You may be the only one who can help me."
+    [/message]
+    [message]
+      speaker=sylph
+      message=_"I am sorry but I have my own troubles. These fools want to defile this forest. If you help me with them then I can help you."
+    [/message]
+    [message]
+      speaker=Elrilindë
+      message=_"Well."
+    [/message]
 	[/event]
   
   [event]
@@ -112,9 +135,51 @@
     [/filter]
     [message]
       speaker=unit
-      message=_""
+      message=_"Now nobody can stop these fools. They will destroy everything what we elves love."
     [/message]
     {DEFEAT}
+  [/event]
+  
+  [event]
+	  name=die
+	  first_time_only=no
+    # check if all enemies are dead
+	  [filter]
+	    side=3
+	  [/filter]
+	  [if]
+	    [have_unit]
+	      side=3
+	    [/have_unit]
+	    [else]
+        # if yes player won
+	      [fire_event]
+	        name=completed
+	      [/fire_event]
+	    [/else]
+	  [/if]
+	[/event]
+  
+  [event]
+    name=completed
+    [message]
+      speaker=unit
+      message=_"That was the last one."
+    [/message]
+    [message]
+      speaker=sylph
+      message=_"Thank you. Now tell me what can I help you with."
+    [/message]
+    [message]
+      speaker=Elrilindë
+      message=_"I lost all my memories. I didn't know who am I."
+    [/message]
+    [endlevel]
+      result=victory
+      bonus=no
+      carryover_report=no
+      carryover_percentage=0
+    [/endlevel]
   [/event]
   
   [event]
