scenario 3 - removing shroud in start event - added part of final dialogue - added last breath event for loyal elves - added some comments

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -16,7 +16,7 @@
 		controller=human
 		team_name=elves
     user_team_name= _ "Elves"
-    shroud=yes
+    shroud=yes # will be removed in start event
 
 		type=Elrilindë Elvish Sorceress
 		id=Elrilindë
@@ -83,6 +83,7 @@
   
   [event]
     name=prestart
+    # create enemies
 		[objectives]
 			side=1
 			[objective]
@@ -126,6 +127,14 @@
       speaker=Elrilindë
       message=_"Well."
     [/message]
+    [modify_side]
+      side=1
+      shroud=no
+    [/modify_side]
+    [modify_side]
+      side=2
+      shroud=no
+    [/modify_side]
 	[/event]
   
   [event]
@@ -138,6 +147,24 @@
       message=_"Now nobody can stop these fools. They will destroy everything what we elves love."
     [/message]
     {DEFEAT}
+  [/event]
+  
+  [event]
+    name=last breath
+    first_time_only=no
+    [filter]
+      side=1
+      [not]
+        id=Elrilindë
+      [/not]
+      [not]
+        id=guide
+      [/not]
+    [/filter]
+    [message]
+      speaker=Elrilindë
+      message=_"Farewell $unit.name. I will miss you."
+    [/message]
   [/event]
   
   [event]
@@ -173,6 +200,18 @@
     [message]
       speaker=Elrilindë
       message=_"I lost all my memories. I didn't know who am I."
+    [/message]
+    [message]
+      speaker=sylph
+      message=_"Only a very powerfull magician can do a such thing. And only someone stronger can break it."
+    [/message]
+    [message]
+      speaker=Elrilindë
+      message=_"Can you break it?"
+    [/message]
+    [message]
+      speaker=sylph
+      message=_"Of course I can. There is nobody more powerfull here. Alas I need some items for this spell."
     [/message]
     [endlevel]
       result=victory
