created enemies and improved enemies' ai in scenario 3 some minor changes (don't affect the game at all)

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -316,7 +316,7 @@
 		  speaker=Tendriel
 		  message=_"Me neither, milady. But we must get to their leader and they are blocking our way."
 		[/message]
-    # scroll to her again
+    # scroll back to her
     [scroll_to_unit]
 	    id=Elrilindë
 	  [/scroll_to_unit]
