--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -108,7 +108,7 @@
     [/message]
     [message]
       speaker=guide
-      message=_"I am not sure, milady. By the tales she could live to the west but nobody of our people saw her for decades."
+      message=_"I am not sure, milady. By the tales she could live in the west but nobody of our people saw her for decades."
     [/message]
     [message]
       speaker=Elrilindë
