--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -1,5 +1,17 @@
 #textdomain wesnoth-The_Memories
 
+#define ENEMY TYPE X Y
+  [unit]
+    type={TYPE}
+    side=3
+    x,y={X},{Y}
+    generate_name=yes
+    random_traits=yes
+    random_gender=yes
+    upkeep=loyal
+  [/unit]
+#enddef
+
 [scenario]
 	id=03_The_Sylph
 	name=_"The Sylph"
@@ -79,11 +91,34 @@
     
     {FLAG_VARIANT loyalist}
 		{SIDE_NO_ECONOMY}
+    
+    [ai]
+      [goal]
+        [criteria]
+          side=2
+        [/criteria]
+        value=10
+      [/goal]
+      [goal]
+        [criteria]
+          side=1
+        [/criteria]
+        value=2
+      [/goal]
+    [/ai]
   [/side]
   
   [event]
     name=prestart
     # create enemies
+    {ENEMY Spearman 13 23}
+    {ENEMY Spearman 14 22}
+    {ENEMY Spearman 15 21}
+    {ENEMY Bowman 16 22}
+    {ENEMY Bowman 17 23}
+    {ENEMY Horseman 13 24}
+    {ENEMY Horseman 17 24}
+    {ENEMY Duelist 15 24}
 		[objectives]
 			side=1
 			[objective]
@@ -233,3 +268,5 @@
   {GUIDES_DEATH}
   {ELUSIVE_HERO}
 [/scenario]
+
+#undef ENEMY
