added some speeches for the sylph in scenario 3

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -174,18 +174,6 @@
   
   [event]
     name=last breath
-    [filter]
-      id=sylph
-    [/filter]
-    [message]
-      speaker=unit
-      message=_"Now nobody can stop these fools. They will destroy everything what we elves love."
-    [/message]
-    {DEFEAT}
-  [/event]
-  
-  [event]
-    name=last breath
     first_time_only=no
     [filter]
       side=1
@@ -262,6 +250,53 @@
       speaker=sylph
       message=_"You can't handle few enemies. You don't deserve my help."
     [/message]
+  [/event]
+  
+  # speeches for the sylph
+  
+  [event]
+    name=attack
+    [filter_second]
+      id=sylph
+    [/filter_second]
+    [message]
+      speaker=second_unit
+      message=_"Only a fool would dare to attack me!"
+    [/message]
+  [/event]
+  
+  [event]
+    name=attack
+    [filter]
+      id=sylph
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"Taste Nature's fury!"
+    [/message]
+  [/event]
+  
+  [event]
+    name=die
+    [filter_second]
+      id=sylph
+    [/filter_second]
+    [message]
+      speaker=unit
+      message=_"This will happend to anyone who wants to defile my forest!"
+    [/message]
+  [/event]
+  
+  [event]
+    name=last breath
+    [filter]
+      id=sylph
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"Now nobody can stop these fools. They will destroy everything what we elves love."
+    [/message]
+    {DEFEAT}
   [/event]
   
   {ELRILINDES_DEATH1}
