added music to all 3 scenarios

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -7,7 +7,7 @@
 	map_data="{~add-ons/The_Memories/maps/01_The_Begining.map}"
 	snapshot=no
   turns=25
-  # add music
+  {SCENARIO_MUSIC silvan_sanctuary.ogg}
 	{DEFAULT_SCHEDULE}
   
   [side]
@@ -164,6 +164,7 @@
 			speaker=Elrilindë
 			message=_"It is really beautiful here. I could stay here forever. But wait ..."
 		[/message]
+    {REPLACE_SCENARIO_MUSIC battle.ogg}
     # from now hero sees the whole map
     [modify_side]
       side=1
@@ -201,6 +202,7 @@
       user_team_name= _ "Humans"
     [/modify_side]
     {FULL_HEAL id=Raoron}
+    {REPLACE_SCENARIO_MUSIC revelation.ogg}
     # i need make the game to stop the attack but i have no idea how to do it
     [message]
 			speaker=Tendriel
