--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -37,7 +37,8 @@
 	map_data="{~add-ons/The_Memories/maps/02_Seeking_the_sylph.map}"
 	snapshot=no
   turns=25
-  # add music
+  {SCENARIO_MUSIC breaking_the_chains.ogg}
+  {EXTRA_SCENARIO_MUSIC wanderer.ogg}
 	{DEFAULT_SCHEDULE}
   victory_when_enemies_defeated=no
   
