--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -19,7 +19,7 @@
 	map_data="{~add-ons/The_Memories/maps/03_The_Sylph.map}"
 	snapshot=no
   turns=25
-  # add music
+  {SCENARIO_MUSIC elf-land.ogg}
 	{DEFAULT_SCHEDULE}
   victory_when_enemies_defeated=no
   
@@ -170,6 +170,9 @@
       side=2
       shroud=no
     [/modify_side]
+    {REPLACE_SCENARIO_MUSIC battle.ogg}
+    {APPEND_MUSIC wanderer.ogg}
+    {APPEND_MUSIC breaking_the_chains.ogg}
 	[/event]
   
   [event]
@@ -216,6 +219,7 @@
       speaker=unit
       message=_"That was the last one."
     [/message]
+    {REPLACE_SCENARIO_MUSIC elvish-theme.ogg}
     [message]
       speaker=sylph
       message=_"Thank you. Now tell me what can I help you with."
