heroine gains some amla - improving faerie fire attack, movement and defences Issue:3

--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -212,6 +212,155 @@
 			halo_x,halo_y=0,-28
 		[/frame]
 	[/attack_anim]
-  
-  # add amla - improving attacks
+  [advancement]
+    max_times=1
+    always_display=yes
+    id=faerie1
+    description= _ "causing more havoc with faerie fire"
+    image=attacks/faerie-fire.png
+    strict_amla=yes
+    require_amla=""
+	  [effect]
+		  apply_to=attack
+		  name=faerie fire
+		  increase_damage=1
+		  increase_attacks=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=1
+    always_display=yes
+    id=faerie2
+    description= _ "causing more havoc with faerie fire"
+    image=attacks/faerie-fire.png
+    strict_amla=yes
+    require_amla="faerie1"
+	  [effect]
+		  apply_to=attack
+		  name=faerie fire
+		  increase_damage=-1
+		  increase_attacks=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=1
+    always_display=yes
+    id=faerie3
+    description= _ "causing more havoc with faerie fire"
+    image=attacks/faerie-fire.png
+    strict_amla=yes
+    require_amla="faerie1,faerie2"
+	  [effect]
+		  apply_to=attack
+		  name=faerie fire
+		  increase_damage=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=1
+    always_display=yes
+    id=faerie3_speed
+    description= _ "faster with faerie fire"
+    image=attacks/faerie-fire.png
+    strict_amla=yes
+    require_amla="faerie1,faerie2,faerie3"
+	  [effect]
+		  apply_to=attack
+		  name=faerie fire
+		  increase_attacks=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=1
+    always_display=yes
+    id=faerie4
+    description= _ "causing more havoc with faerie fire"
+    image=attacks/faerie-fire.png
+    strict_amla=yes
+    require_amla="faerie1,faerie2,faerie3"
+	  [effect]
+		  apply_to=attack
+		  name=faerie fire
+		  increase_damage=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=1
+    always_display=yes
+    id=faerie5
+    description= _ "causing more havoc with faerie fire"
+    image=attacks/faerie-fire.png
+    strict_amla=yes
+    require_amla="faerie1,faerie2,faerie3,faerie4"
+	  [effect]
+		  apply_to=attack
+		  name=faerie fire
+		  increase_damage=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=1
+    always_display=yes
+    id=faerie5_speed
+    description= _ "faster with faerie fire"
+    image=attacks/faerie-fire.png
+    strict_amla=yes
+    require_amla="faerie1,faerie2,faerie3,faerie4,faerie5"
+	  [effect]
+		  apply_to=attack
+		  name=faerie fire
+		  increase_attacks=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=3
+    always_display=yes
+    id=movement
+    description= _ "faster"
+    image=icons/boots_elven.png
+    strict_amla=yes
+    require_amla=""
+		[effect]
+			apply_to=movement
+			increase=1
+		[/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=5
+    always_display=yes
+    id=movement2
+    description= _ "more dextrous (2% better defences on all terrains)"
+    image=icons/jewelry_butterfly_pin.png
+    strict_amla=yes
+    require_amla="movement,movement"
+	  [effect]
+		  apply_to=defense
+		  replace=false
+		  [defense]
+			  frozen=-2
+			  castle=-2
+			  sand=-2
+			  village=-2
+			  flat=-2
+			  hills=-2
+			  swamp_water=-2
+			  cave=-2
+			  shallow_water=-2
+			  reef=-2
+			  forest=-2
+			  fungus=-2
+			  unwalkable=-2
+			  deep_water=-2
+		  [/defense]
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
 [/unit_type]
