the sylph is really speaking when she kill someone in scenario The Sylph

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -286,7 +286,7 @@
       id=sylph
     [/filter_second]
     [message]
-      speaker=unit
+      speaker=second_unit
       message=_"This will happend to anyone who wants to defile my forest!"
     [/message]
   [/event]
