heroine gains more amla - improving faerie touch and gossamer attack Issue:3

--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -214,6 +214,62 @@
 	[/attack_anim]
   [advancement]
     max_times=1
+    id=melee
+    description= _ "faster at melee combat"
+    image="attacks/touch-faerie.png"
+    strict_amla=yes
+    require_amla=""
+	  [effect]
+		  apply_to=attack
+		  name=faerie touch
+		  increase_attacks=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=8
+    id=melee2
+    description= _ "better at melee combat"
+    image="attacks/touch-faerie.png"
+    strict_amla=yes
+    require_amla="melee"
+	  [effect]
+		  apply_to=attack
+		  name=faerie touch
+		  increase_damage=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=2
+    id=web
+    description= _ "faster with spiderwebs"
+    image="attacks/web.png"
+    strict_amla=yes
+    require_amla=""
+	  [effect]
+		  apply_to=attack
+		  name=gossamer
+		  increase_attacks=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=8
+    id=web2
+    description= _ "better with spiderwebs"
+    image="attacks/web.png"
+    strict_amla=yes
+    require_amla="web"
+	  [effect]
+		  apply_to=attack
+		  name=gossamer
+		  increase_damage=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    max_times=1
     always_display=yes
     id=faerie1
     description= _ "causing more havoc with faerie fire"
