--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -5,7 +5,7 @@
 	name={S_ELVISH_SYLPH}
 	race=elf
 	gender=female
-	image="oldelvish-sylph.png"
+	image="units/oldelvish-sylph.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	halo=halo/elven/shyde-stationary-halo1.png:150,halo/elven/shyde-stationary-halo2.png:150,halo/elven/shyde-stationary-halo3.png:150,halo/elven/shyde-stationary-halo4.png:150,halo/elven/shyde-stationary-halo5.png:150,halo/elven/shyde-stationary-halo6.png:150
 	hitpoints=60
@@ -59,8 +59,8 @@
 		range=ranged
 		icon=attacks/faerie-fire.png
 	[/attack]
-	{DEFENSE_ANIM_FILTERED "oldelvish-sylph-defend.png" "oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=melee }
-	{DEFENSE_ANIM_FILTERED "oldelvish-sylph-defend.png" "oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=ranged }
+	{DEFENSE_ANIM_FILTERED "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=melee }
+	{DEFENSE_ANIM_FILTERED "units/oldelvish-sylph-defend.png" "units/oldelvish-sylph.png" {SOUND_LIST:ELF_FEMALE_HIT} range=ranged }
 	[attack_anim]
 		[filter_attack]
 			name=faerie touch
@@ -68,17 +68,17 @@
 		[frame]
 			begin=-200
 			end=-100
-			image="oldelvish-sylph-ftouch-attack1.png"
+			image="units/oldelvish-sylph-ftouch-attack1.png"
 		[/frame]
 		[frame]
 			begin=-100
 			end=100
-			image="oldelvish-sylph-ftouch-attack2.png"
+			image="units/oldelvish-sylph-ftouch-attack2.png"
 		[/frame]
 		[frame]
 			begin=100
 			end=200
-			image="oldelvish-sylph-ftouch-attack3.png"
+			image="units/oldelvish-sylph-ftouch-attack3.png"
 		[/frame]
 	[/attack_anim]
 	[attack_anim]
@@ -94,42 +94,42 @@
 		[frame]
 			begin=-450
 			end=-375
-			image="oldelvish-sylph.png"
+			image="units/oldelvish-sylph.png"
 			halo=halo/elven/faerie-fire-halo1.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-375
 			end=-300
-			image="oldelvish-sylph-gossamer-attack1.png"
+			image="units/oldelvish-sylph-gossamer-attack1.png"
 			halo=halo/elven/faerie-fire-halo2.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-300
 			end=-225
-			image="oldelvish-sylph-gossamer-attack2.png"
+			image="units/oldelvish-sylph-gossamer-attack2.png"
 			halo=halo/elven/faerie-fire-halo3.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-225
 			end=-150
-			image="oldelvish-sylph-gossamer-attack3.png"
+			image="units/oldelvish-sylph-gossamer-attack3.png"
 			halo=halo/elven/faerie-fire-halo4.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-150
 			end=-75
-			image="oldelvish-sylph-gossamer-attack3.png"
+			image="units/oldelvish-sylph-gossamer-attack3.png"
 			halo=halo/elven/faerie-fire-halo5.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-75
 			end=0
-			image="oldelvish-sylph-gossamer-attack2.png"
+			image="units/oldelvish-sylph-gossamer-attack2.png"
 			halo=halo/elven/faerie-fire-halo6.png
 			sound=entangle.wav
 			halo_x,halo_y=0,-28
@@ -137,7 +137,7 @@
 		[frame]
 			begin=-0
 			end=75
-			image="oldelvish-sylph-gossamer-attack1.png"
+			image="units/oldelvish-sylph-gossamer-attack1.png"
 			halo=halo/elven/faerie-fire-halo7.png
 			halo_x,halo_y=0,-28
 		[/frame]
@@ -152,7 +152,7 @@
 			[frame]
 				begin=-450
 				end=-375
-				image="oldelvish-sylph-attack1.png"
+				image="units/oldelvish-sylph-attack1.png"
 				sound=magic-faeriefire.ogg
 				halo=halo/elven/faerie-fire-halo1.png
 				halo_x,halo_y=0,-28
@@ -163,7 +163,7 @@
 			[frame]
 				begin=-450
 				end=-375
-				image="oldelvish-sylph-attack1.png"
+				image="units/oldelvish-sylph-attack1.png"
 				sound=magic-faeriefire-miss.ogg
 				halo=halo/elven/faerie-fire-halo1.png
 				halo_x,halo_y=0,-28
@@ -172,42 +172,42 @@
 		[frame]
 			begin=-375
 			end=-300
-			image="oldelvish-sylph-attack1.png"
+			image="units/oldelvish-sylph-attack1.png"
 			halo=halo/elven/faerie-fire-halo2.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-300
 			end=-225
-			image="oldelvish-sylph-attack2.png"
+			image="units/oldelvish-sylph-attack2.png"
 			halo=halo/elven/faerie-fire-halo3.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-225
 			end=-150
-			image="oldelvish-sylph-attack2.png"
+			image="units/oldelvish-sylph-attack2.png"
 			halo=halo/elven/faerie-fire-halo4.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-150
 			end=-75
-			image="oldelvish-sylph-attack3.png"
+			image="units/oldelvish-sylph-attack3.png"
 			halo=halo/elven/faerie-fire-halo5.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-75
 			end=0
-			image="oldelvish-sylph-attack4.png"
+			image="units/oldelvish-sylph-attack4.png"
 			halo=halo/elven/faerie-fire-halo6.png
 			halo_x,halo_y=0,-28
 		[/frame]
 		[frame]
 			begin=-0
 			end=75
-			image="oldelvish-sylph-attack5.png"
+			image="units/oldelvish-sylph-attack5.png"
 			halo=halo/elven/faerie-fire-halo7.png
 			halo_x,halo_y=0,-28
 		[/frame]
