--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -15,10 +15,10 @@
 [scenario]
 	id=03_The_Sylph
 	name=_"The Sylph"
-	next_scenario=04_Xxx
+	next_scenario=04a_The_Leaf
 	map_data="{~add-ons/The_Memories/maps/03_The_Sylph.map}"
 	snapshot=no
-  turns=25
+  turns=15
   {SCENARIO_MUSIC elf-land.ogg}
 	{DEFAULT_SCHEDULE}
   victory_when_enemies_defeated=no
@@ -240,6 +240,15 @@
       speaker=sylph
       message=_"Of course I can. There is nobody more powerfull here. Alas I need some items for this spell."
     [/message]
+    [message]
+      speaker=sylph
+      message=_"The first of them is a leaf of a plant named ... Well it doesn't matter. Just go to the north. Follow the path and collect one leaf. Then return to me."
+    [/message]
+    [message]
+      speaker=Elrilindë
+      message=_"As you say."
+    [/message]
+    {VARIABLE items_collected 0}
     [endlevel]
       result=victory
       bonus=no
