scenario 4 - changed next scenario (only temporarily) - shorted time limit (on the amount originally intended) - changed location of bow (on the location originally intended)

--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -3,10 +3,10 @@
 [scenario]
 	id=04a_The_Leaf
 	name=_"The Leaf"
-	next_scenario=04a_The_Leaf
+	next_scenario=xxx
 	map_data="{~add-ons/The_Memories/maps/04a_The_Leaf.map}"
 	snapshot=no
-  turns=25
+  turns=17
   {SCENARIO_MUSIC breaking_the_chains.ogg}
   {EXTRA_SCENARIO_MUSIC wanderer.ogg}
 	{DEFAULT_SCHEDULE}
@@ -57,7 +57,7 @@
 		[/objectives]
   [/event]
   
-  {PICKUPPABLE_ITEM bow_of_sarelias 8 12 id=guide,elf2,elf3 items/bow-elven.png
+  {PICKUPPABLE_ITEM bow_of_sarelias 17 14 id=guide,elf2,elf3 items/bow-elven.png
     _"$unit.name finds a pretty bow. Should he/she pick it up?"
     _"Take it"
     _"Leave it"
