created scenario 4b (it is not optional, the player will have to pass all scenarios from 4a to 4d) changed next scenario in 4a

--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-The_Memories
 
 [scenario]
-	id=04a_The_Leaf
-	name=_"The Leaf"
+	id=04b_The_Fruit
+	name=_"The Fruit"
 	next_scenario=05_Back_with_Sylph
-	map_data="{~add-ons/The_Memories/maps/04a_The_Leaf.map}"
+	map_data="{~add-ons/The_Memories/maps/04b_The_Fruit.map}"
 	snapshot=no
   turns=17
   {SCENARIO_MUSIC breaking_the_chains.ogg}
@@ -50,72 +50,78 @@
 		[objectives]
 			side=1
 			[objective]
-				description= _ "Collect a leaf"
+				description= _ "Collect a fruit"
 				condition=win
 			[/objective]
 			{HOW_TO_LOSE}
 		[/objectives]
   [/event]
   
-  {PICKUPPABLE_ITEM bow_of_sarelias 17 14 id=guide,elf2,elf3 items/bow-elven.png
-    _"$unit.name finds a pretty bow. Should he/she pick it up?"
+  {PICKUPPABLE_ITEM shield_of_triewin 17 14 id=elf1 items/buckler.png # change 17 and 14
+    _"$unit.name finds a pretty shield. Should he pick it up?"
     _"Take it"
     _"Leave it"
-    _"$unit.name finds a pretty bow. But only an archer can take it!" (
+    _"$unit.name finds a pretty shield. But only a fighter can take it!" (
     [object]
-      id=bow_of_sarelias
-      name= _ "Bow of Sarelias"
-      image=items/bow-elven.png
-      description= _ "This bow grants the wearer +2 damage and +1 attack for ranged weapon!"
+      id=shield_of_triewin
+      name= _ "Shield of Triewin"
+      image=items/buckler.png
+      description= _ "This shield grants the wearer 15 % better physical resistances!"
       [effect]
-        apply_to=attack
-        range=ranged
-        increase_damage=2
-        increase_attacks=1
+        apply_to=resistance
+        replace=false
+        [resistance]
+          blade=-15
+          pierce=-15
+          impact=-15
+        [/resistance]
       [/effect]
     [/object]
-    [message]
-      speaker=unit
-      message=_"It seems to be a bow of legendary elven archer Sarelias. But why is it on this place?"
-    [/message]
-  )} # a bow
+  )} # a shield
   
-  {PLACE_IMAGE items/flower1.png 9 9}
-  {PLACE_IMAGE items/flower1.png 10 8}
-  {PLACE_IMAGE items/flower1.png 11 8}
-  {PLACE_IMAGE items/flower1.png 12 7}
+  {PLACE_IMAGE items/flower3.png 4 15}
+  {PLACE_IMAGE items/flower3.png 5 16}
+  {PLACE_IMAGE items/flower3.png 6 16}
   
   [event]
     name=start
     # recall the guide and loyal elves
     {RECALL_HEROES}
     # place some wild animals
-    {WILD_WOLF 16 4}
-    {WILD_WOLF 18 4}
-    {WILD_WOLF 20 4}
-    {WILD_WOLF 18 5}
-    {WILD_WOLF 4 6}
-    {WILD_WOLF 3 8}
+    {WILD_WOLF 11 23}
+    {WILD_WOLF 13 23}
+    {WILD_WOLF 15 23}
+    {WILD_WOLF 13 21}
+    {WILD_WOLF 4 11}
+    {WILD_WOLF 6 8}
     # starting dialog
     [message]
       speaker=Elrilindë
-      message=_"Do you have any idea what could be here, Gioniel?"
+      message=_"It seems that this forest is very wide. I cannot see next edge of it."
     [/message]
     [message]
       speaker=guide
-      message=_"I am sorry, milady. I never visited this part of the forest. Only thing I know is that this is the north edge of the forest. Farther to the north are lands of the men."
+      message=_"Yes, our forest is very wide, milady but we do not inhabit all its parts. Some of them are very terrifying."
     [/message]
     [message]
       speaker=Elrilindë
-      message=_"And what are those humans like?"
+      message=_"Is it the case of this part?"
     [/message]
     [message]
       speaker=guide
-      message=_"Not aggressive at least. We have no contact with them."
+      message=_"Not at all. You do not need to fear, milady. (whispers) But I hope that the Sylph will not send us to the south."
+    [/message]
+    [messsage]
+      speaker=Elrilindë
+      message=_"What did you whisper, Gioniel?"
+    [/message]
+    [message]
+      speaker=guide
+      message=_"Only that I hope that we will find the plant very soon."
     [/message]
     [message]
       speaker=Elrilindë
-      message=_"Ok let us look for our plant."
+      message=_"Yes, you are right. We should hurry."
     [/message]
   [/event]
   
@@ -123,10 +129,10 @@
     name=moveto
     [filter]
       side=1
-      x,y=9,9
+      x,y=4,15
     [/filter]
     [fire_event]
-      name=leaf_found
+      name=fruit_found
       [primary_unit]
         x,y=$x1,$y1
       [/primary_unit]
@@ -137,10 +143,10 @@
     name=moveto
     [filter]
       side=1
-      x,y=10,8
+      x,y=5,16
     [/filter]
     [fire_event]
-      name=leaf_found
+      name=fruit_found
       [primary_unit]
         x,y=$x1,$y1
       [/primary_unit]
@@ -151,10 +157,10 @@
     name=moveto
     [filter]
       side=1
-      x,y=11,8
+      x,y=6,16
     [/filter]
     [fire_event]
-      name=leaf_found
+      name=fruit_found
       [primary_unit]
         x,y=$x1,$y1
       [/primary_unit]
@@ -162,28 +168,14 @@
   [/event]
   
   [event]
-    name=moveto
-    [filter]
-      side=1
-      x,y=12,7
-    [/filter]
-    [fire_event]
-      name=leaf_found
-      [primary_unit]
-        x,y=$x1,$y1
-      [/primary_unit]
-    [/fire_event]
-  [/event]
-  
-  [event]
-    name=leaf_found
+    name=fruit_found
     [message]
       speaker=unit
       message=_"I have found the plant."
     [/message]
     [message]
       speaker=Elrilindë
-      message=_"Very well. Let us take one leaf and go back to the Sylph."
+      message=_"Very well. Let us take the fruit and go back to the Sylph."
     [/message]
     {VARIABLE_OP items_collected add 1}
     [endlevel]
