renamed first scenario (not id) changed location of shield in scenario 4b, corrected one typo here created fifth scenario (the player will have to visit it three times but there will be different dialog here)

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -2,7 +2,7 @@
 
 [scenario]
 	id=01_The_Begining
-	name=_"The Begining"
+	name=_"The Beginning"
 	next_scenario=02_Seeking_the_sylph
 	map_data="{~add-ons/The_Memories/maps/01_The_Begining.map}"
 	snapshot=no
