--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -57,7 +57,7 @@
 		[/objectives]
   [/event]
   
-  {PICKUPPABLE_ITEM shield_of_triewin 17 14 id=elf1 items/buckler.png # change 17 and 14
+  {PICKUPPABLE_ITEM shield_of_triewin 9 13 id=elf1 items/buckler.png
     _"$unit.name finds a pretty shield. Should he pick it up?"
     _"Take it"
     _"Leave it"
@@ -111,7 +111,7 @@
       speaker=guide
       message=_"Not at all. You do not need to fear, milady. (whispers) But I hope that the Sylph will not send us to the south."
     [/message]
-    [messsage]
+    [message]
       speaker=Elrilindë
       message=_"What did you whisper, Gioniel?"
     [/message]
