--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-The_Memories
 
-#define LOYAL_ELF TYPE ID X Y
+#define LOYAL_ELF TYPE ID X Y ADVANCES_TO
   [unit]
     side=1
     type={TYPE}
@@ -16,6 +16,18 @@
       to_recall=yes
     [/variables]
   [/unit]
+  [store_unit]
+    [filter]
+      id={ID}
+    [/filter]
+    variable=temp_store
+  [/store_unit]
+  {VARIABLE temp_store.advances_to {ADVANCES_TO}}
+  [unstore_unit]
+    variable=temp_store
+    find_vacant=no
+  [/unstore_unit]
+  {CLEAR_VARIABLE temp_store}
 #enddef
 
 #define WILD_WOLF X Y
@@ -92,9 +104,9 @@
     # recall the guide
     {RECALL_HEROES}
     # and give some loyal elves
-    {LOYAL_ELF (Elvish Fighter) elf1 42 15}
-    {LOYAL_ELF (Elvish Archer) elf2 41 17}
-    {LOYAL_ELF (Elvish Archer) elf3 42 17}
+    {LOYAL_ELF (Elvish Fighter) elf1 42 15 (Elvish Hero)}
+    {LOYAL_ELF (Elvish Archer) elf2 41 17 (Elvish Marksman)}
+    {LOYAL_ELF (Elvish Archer) elf3 42 17 (Elvish Marksman)}
     # place some wild animals
     {WILD_WOLF 26 30}
     {WILD_WOLF 30 31}
