guide's name is translateable now

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -270,7 +270,7 @@
       type=Elvish Ranger
       placement=recall
       id=guide
-      name=Gioniel
+      name=_"Gioniel"
       gender=female
       unrenamable=yes
       [modifications]
