death of a druid will cause defeat corrected id of guide in her die event created macro GENERIC_DEATHS1 for death speeches of all heroes and loyal units

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -332,8 +332,7 @@
     [/message]
   [/event]
   
-  {ELRILINDES_DEATH1}
-  {TENDRIEL_DEATH1}
+  {GENERIC_DEATHS1}
   {ELUSIVE_HERO}
 [/scenario]
  
