--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -187,24 +187,6 @@
   [/event]
   
   [event]
-    name=last breath
-    first_time_only=no
-    [filter]
-      side=1
-      [not]
-        id=Elrilindë
-      [/not]
-      [not]
-        id=guide
-      [/not]
-    [/filter]
-    [message]
-      speaker=Elrilindë
-      message=_"Farewell $unit.name. I will miss you."
-    [/message]
-  [/event]
-  
-  [event]
     name=time over
     [message]
       speaker=Elrilindë
@@ -212,7 +194,6 @@
     [/message]
   [/event]
   
-  {ELRILINDES_DEATH1}
-  {GUIDES_DEATH}
+  {GENERIC_DEATHS1}
   {ELUSIVE_HERO}
 [/scenario]
