--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -116,7 +116,7 @@
         [/message]
         [message]
           speaker=guide
-          message=_"(whisper) I suspected that we will have to go there!"
+          message=_"(whispers) I suspected that we will have to go there!"
         [/message]
         [message]
           speaker=sylph
