--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -24,6 +24,16 @@
 		  [/have_unit]
 		[/show_if]
 	[/objective]
+  [objective]
+		description= _ "Death of Tináclya"
+		condition=lose
+		[show_if]
+		  [have_unit]
+		    id=druid
+        search_recall_list=yes
+		  [/have_unit]
+		[/show_if]
+	[/objective]
 	{TURNS_RUN_OUT}
 #enddef
 
@@ -91,12 +101,50 @@
   [event]
     name=die
     [filter]
-      id=Gioniel
+      id=guide
     [/filter]
     [message]
       speaker=Elrilindë
       message=_"No! I will remember nothing without her."
     [/message]
     {DEFEAT}
+  [/event]
+#enddef
+
+#define DRUIDS_DEATH
+  [event]
+    name=die
+    [filter]
+      id=druid
+    [/filter]
+    [message]
+      speaker=Elrilindë
+      message=_"No!"
+    [/message]
+    {DEFEAT}
+  [/event]
+#enddef
+
+#define GENERIC_DEATHS1
+  {ELRILINDES_DEATH1}
+  {TENDRIEL_DEATH1}
+  {GUIDES_DEATH}
+  {DRUIDS_DEATH}
+  [event]
+    name=last breath
+    first_time_only=no
+    [filter]
+      side=1
+      [not]
+        id=Elrilindë
+      [/not]
+      [not]
+        id=guide
+      [/not]
+    [/filter]
+    [message]
+      speaker=Elrilindë
+      message=_"Farewell $unit.name. I will miss you."
+    [/message]
   [/event]
 #enddef
