--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -176,24 +176,6 @@
 	[/event]
   
   [event]
-    name=last breath
-    first_time_only=no
-    [filter]
-      side=1
-      [not]
-        id=Elrilindë
-      [/not]
-      [not]
-        id=guide
-      [/not]
-    [/filter]
-    [message]
-      speaker=Elrilindë
-      message=_"Farewell $unit.name. I will miss you."
-    [/message]
-  [/event]
-  
-  [event]
 	  name=die
 	  first_time_only=no
     # check if all enemies are dead
@@ -312,8 +294,7 @@
     {DEFEAT}
   [/event]
   
-  {ELRILINDES_DEATH1}
-  {GUIDES_DEATH}
+  {GENERIC_DEATHS1}
   {ELUSIVE_HERO}
 [/scenario]
 
