added next monsters in scenario 4c

--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -78,9 +78,25 @@
     [/unit]
     [unit]
       side=2
+      type=Giant Mudcrawler
+      upkeep=loyal
+      x,y=9,21
+      animate=no
+      ai_special=guardian
+    [/unit]
+    [unit]
+      side=2
       type=Mudcrawler
       upkeep=loyal
       x,y=11,22
+      animate=no
+      ai_special=guardian
+    [/unit]
+    [unit]
+      side=2
+      type=Mudcrawler
+      upkeep=loyal
+      x,y=11,21
       animate=no
       ai_special=guardian
     [/unit]
@@ -97,6 +113,14 @@
       type=Mudcrawler
       upkeep=loyal
       x,y=7,20
+      animate=no
+      ai_special=guardian
+    [/unit]
+    [unit]
+      side=2
+      type=Mudcrawler
+      upkeep=loyal
+      x,y=7,21
       animate=no
       ai_special=guardian
     [/unit]
