created scenario 4d created macro for death of loyal elves

--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -125,11 +125,7 @@
   [/event]
 #enddef
 
-#define GENERIC_DEATHS1
-  {ELRILINDES_DEATH1}
-  {TENDRIEL_DEATH1}
-  {GUIDES_DEATH}
-  {DRUIDS_DEATH}
+#define LOYAL_ELVES_DEATH
   [event]
     name=last breath
     first_time_only=no
@@ -147,4 +143,12 @@
       message=_"Farewell $unit.name. I will miss you."
     [/message]
   [/event]
+#enddef
+
+#define GENERIC_DEATHS1
+  {ELRILINDES_DEATH1}
+  {TENDRIEL_DEATH1}
+  {GUIDES_DEATH}
+  {DRUIDS_DEATH}
+  {LOYAL_ELVES_DEATH}
 #enddef
