spirits in scenario 4d are really stronger now druid is recalled now

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -11,31 +11,33 @@
     upkeep=loyal
     ai_special=guardian
     # they have more hitpoints and stronger attacks than mere ghosts
-    [object]
-      silent=yes
-      [effect]
-        apply_to=hitpoints
-        increase_total=150%
-        heal_full=yes
-      [/effect]
-    [/object]
-    [object]
-      silent=yes
-      [effect]
-        apply_to=attack
-        name=touch
-        increase_damage=50%
-      [/effect]
-    [/object]
-    [object]
-      silent=yes
-      [effect]
-        apply_to=attack
-        name=wail
-        increase_damage=2
-        increase_attacks=1
-      [/effect]
-    [/object]
+    [modifications]
+      [object]
+        silent=yes
+        [effect]
+          apply_to=hitpoints
+          increase_total=150%
+          heal_full=yes
+        [/effect]
+      [/object]
+      [object]
+        silent=yes
+        [effect]
+          apply_to=attack
+          name=touch
+          increase_damage=50%
+        [/effect]
+      [/object]
+      [object]
+        silent=yes
+        [effect]
+          apply_to=attack
+          name=wail
+          increase_damage=2
+          increase_attacks=1
+        [/effect]
+      [/object]
+    [/modifications]s
     # and require more experiences to level-up
     max_experience=70
   [/unit]
@@ -58,7 +60,7 @@
 		controller=human
 		team_name=elves
     user_team_name= _ "Elves"
-    shroud=yes
+    shroud=no
 
 		type=Elrilindë Elvish Sorceress
 		id=Elrilindë
