--- a/utils/misc.cfg
+++ b/utils/misc.cfg
@@ -59,5 +59,8 @@
       id=$units_to_recall[$i].id
   [/recall]
   {NEXT i}
+  [recall]
+    id=druid
+  [/recall]
   {CLEAR_VARIABLE units_to_recall}
 #enddef
