heroine can hit spirits in scenario 4d now, corrected a typo here

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -37,7 +37,7 @@
           increase_attacks=1
         [/effect]
       [/object]
-    [/modifications]s
+    [/modifications]
     # and require more experiences to level-up
     max_experience=70
   [/unit]
@@ -376,7 +376,7 @@
     {VARIABLE_OP items_collected add 1}
   [/event]
   
-  {FORCE_CHANCE_TO_HIT (side=1 canrecruit=no) side=2 0 ()} # they cannot banish spirits and are not allowed to damage the heart
+  {FORCE_CHANCE_TO_HIT (id=guide,druid,elf1,elf2,elf3) side=2 0 ()} # they cannot banish spirits and are not allowed to damage the heart
   {GUIDES_DEATH}
   {DRUIDS_DEATH}
   {LOYAL_ELVES_DEATH}
