spirits in scenario 4d have lesser amount of hitpoints and chance to hit the heroine

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -16,7 +16,7 @@
         silent=yes
         [effect]
           apply_to=hitpoints
-          increase_total=150%
+          increase_total=100%
           heal_full=yes
         [/effect]
       [/object]
@@ -380,7 +380,7 @@
   {GUIDES_DEATH}
   {DRUIDS_DEATH}
   {LOYAL_ELVES_DEATH}
-  #{ELUSIVE_HERO} in this scenario she can be hit normally
+  {FORCE_CHANCE_TO_HIT side=2,3,4,5 id=Elrilindë 20 ()}
 [/scenario]
 
 #unddef SPIRIT
