--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -24,14 +24,6 @@
         silent=yes
         [effect]
           apply_to=attack
-          name=touch
-          increase_damage=50%
-        [/effect]
-      [/object]
-      [object]
-        silent=yes
-        [effect]
-          apply_to=attack
           name=wail
           increase_damage=2
           increase_attacks=1
@@ -123,14 +115,14 @@
 	    variable=temp_store
 	    kill=no
     [/store_unit]
-    {FOREACH temp_store.attack l}
+    {FOREACH temp_store.attack i}
     [if]
 	    [variable]
-	      name=temp_store.attack[$l].name
+	      name=temp_store.attack[$i].name
 	      equals=staff
 	    [/variable]
 	    [then]
-		    {VARIABLE temp_store.attack[$l].attack_weight "0"}
+		    {VARIABLE temp_store.attack[$i].attack_weight "0"}
 	    [/then]
     [/if]
     {NEXT l}
@@ -138,7 +130,7 @@
 	    variable=temp_store
       find_vacant=no
     [/unstore_unit]
-    {CLEAR_VARIABLE temp_store}
+    {CLEAR_VARIABLE temp_store,i}
   [/event]
   
   {PICKUPPABLE_ITEM staff_of_elvil_gawien 15 17 id=Elrilindë items/staff.png
@@ -274,7 +266,7 @@
       speaker=Elrilindë
       message=_"It was the last one. Ok now the bark."
     [/message]
-    {MOVE_UNIT id=Elrilindë 14 17}
+    {MOVE_UNIT id=Elrilindë 14 13}
     {REPEAT 3 (
       [harm_unit]
         [filter]
@@ -357,14 +349,14 @@
 	    variable=temp_store
 	    kill=no
     [/store_unit]
-    {FOREACH temp_store[$i].attack l}
+    {FOREACH temp_store.attack i}
 	  [if]
 		  [variable]
-		    name=temp_store[$i].attack[$l].name
+		    name=temp_store.attack[$i].name
 		    equals=staff
 		  [/variable]
 		  [then]
-				{CLEAR_VARIABLE temp_store[$i].attack[$l].attack_weight}
+				{CLEAR_VARIABLE temp_store.attack[$i].attack_weight}
 		  [/then]
 	  [/if]
 	  {NEXT l}
@@ -372,7 +364,7 @@
 	    variable=temp_store
       find_vacant=no
     [/unstore_unit]
-    {CLEAR_VARIABLE temp_store}
+    {CLEAR_VARIABLE temp_store,i}
     {VARIABLE_OP items_collected add 1}
   [/event]
   
